--- a/app/globals.css
+++ b/app/globals.css
@@ -6,7 +6,7 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
-  --custom_primary: 255, 17, 170;
+  /* --custom_primary: 255, 17, 170; */
 }
 
 @media (prefers-color-scheme: dark) {
@@ -14,7 +14,7 @@
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
-    --custom_primary: 255, 17, 170;
+    /* --custom_primary: 255, 17, 170; */
   }
 }
 
